# wol-api

./: .dockerignore  .gitignore  README.md  README.txt  devenv.nix  devenv.yaml  flake.nix  justfile
.github/workflows/: build_docker_image.yml  ci-nix.yml  ci-rust.yml  playwright-tests.yml
deploy/: Caddyfile  docker-compose.yml  wol-config.yml
dev/: .env.sample  Caddyfile  docker-compose.yml  wol-config.docker.yml  wol-config.yml
dev/ssh/: id_ed25519  id_ed25519.pub
test-machine/: docker-compose.yml  wol-config.yml
wol-api/: .dockerignore  Cargo.toml  Dockerfile  LICENSE  config.yml  flake.nix  justfile  vdi
wol-api/.github/workflows/: ci-nix.yml
wol-api/examples/: config.yml
wol-api/nix/modules/: devshell.nix  formatting.nix  nixos-service.nix  rust.nix
wol-api/res/: scalar.html
wol-api/src/: cache.rs  config.rs  consts.rs  lib.rs  machine.rs  main.rs
wol-api/src/agent/: messages.rs
wol-api/src/cache/: icon.rs  mod.rs  searxng_api.rs
wol-api/src/machine/: api.rs  application.rs  mod.rs  service.rs  wol.rs
wol-api/src/machine/api/: mod.rs  responses.rs
wol-api/src/machine/application/: icon.rs  mod.rs
wol-api/src/machine/ssh/: api.rs
wol-api/src/utils/: comparable_floats.rs  mod.rs
wol-api/tests/: agent-config.yml  simple_config.yml  test_applications.rs  test_config.rs  test_machine_service.rs
wol-api/tests/assets/applications/: jetbrains-pycharm-4735460c-16ab-49d5-ba0f-c0d6a1f1099a.desktop  net.lutris.outerwilds3-3.desktop  userapp-Firefox-5MR5S2.desktop
wol-panel/: .dockerignore  .env  .env.dev  .eslintcache  .npmrc  Caddyfile  Dockerfile  Dockerfile.dev  Dockerfile.test  app.vue  components.d.ts  devenv.nix  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  playwright.config.ts
wol-panel/.helix/: languages.toml
wol-panel/plugins/: vuetify.ts
wol-panel/src/: WolPanel.vue  main.css  main.vue  provides.ts
wol-panel/src/components/: ApplicationButton.vue  ApplicationList.vue  CopiableButton.vue  MachineCard.vue  MachineList.vue  Terminal.vue  WindowPortal.vue
wol-panel/src/lib/api/: v1.d.ts
wol-panel/src/lib/utils/: async.ts  rust.ts  terminal_state.ts
wol-panel/src/lib/xterm-js-addons/: attach.ts
wol-panel/tests/: wol-panel.spec.ts
