[package]
authors = ["eldolfin <oscar.ledauphin@epita.fr>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "wol-relay-server"
description = "A service that allows you to turn on and off computer remotely and more"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.14", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
wol-rs = "1.1.0"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["websocket"], default-features = false }
anyhow = { version = "1.0.94", features = ["backtrace"] }
figment = { version = "0.10.19", features = ["yaml"] }
serde = { version = "1.0.215", features = ["serde_derive"] }
serde_json = "1.0.133"
utoipa = "5.2.0"
utoipa-rapidoc = "5.0.0"
ping-rs = "0.1.2"
inotify = "0.11.0"
rstest = "0.23.0"
futures-util = "0.3.31"
russh = "0.49.2"
async-trait = "0.1.83"

[dev-dependencies]
serde_yaml = "0.9.34"
tempfile = "3.14.0"


[lints.clippy]
all = { level = "deny", priority = -1 }
restriction = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# meta
blanket_clippy_restriction_lints = "allow"
missing_docs_in_private_items = "allow"
cargo_common_metadata = "allow"

# style
implicit_return = { level = "allow", priority = 1 }
shadow_reuse = "allow"
unwrap_used = "allow"
expect_used = "allow"
question_mark_used = "allow"
many_single_char_names = "allow"
min_ident_chars = "allow"
indexing_slicing = "allow"
trivial_regex = "allow"
single_call_fn = "allow"
print_stdout = "allow"
missing_const_for_fn = "allow"
arithmetic_side_effects = "allow"
as_conversions = "allow"
cast_sign_loss = "allow"
integer_division = "allow"
integer_division_remainder_used = "allow"
unseparated_literal_suffix = "allow"
shadow_unrelated = "allow"
unreachable = "allow"
semicolon_outside_block = "allow"
string_slice = "allow"
match_bool = "allow"
std_instead_of_alloc = "allow"
needless_pass_by_value = "allow"
unnecessary_wraps = "allow"
clone_on_ref_ptr = "allow"
redundant_clone = "allow"
exhaustive_structs = "allow"
missing_panics_doc = "allow"
missing_inline_in_public_items = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
std_instead_of_core = "allow"
mod_module_files = "allow"
infinite_loop = "allow"
exhaustive_enums = "allow"
tests_outside_test_module = "allow"
multiple_crate_versions = "allow"
panic_in_result_fn = "allow"
redundant_pub_crate = "allow"
ignored_unit_patterns = "allow"
wildcard_enum_match_arm = "allow"
pattern_type_mismatch = "allow"
